[package]
name = "tuning_fork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = { git = "https://github.com/38/plotters.git", default_features = false, features = ["svg_backend", "line_series"] }
